--- a/templates/sticky-footer/index.html
+++ b/templates/sticky-footer/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.1.1">
     <title>Sticky Footer Template · Bootstrap</title>
+    <link rel="icon" href="images/logo.png" type="image/png">
+
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sticky-footer/">
 
